--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title> Weather App </title>
 </head>
+
 <body>
     <header> Welcome to your local <strong>Weather </strong>dashboard! </header>
-    <div id= "todaysWeather"></div>
+
+    <section class="top">
+        <div class= "input-group mb-3" id="container">
+            <h1 class="heading"> Local Weather App </h1>
+            <form class="box" id="search">
+                <span class="input-group-text" id="inputGroup-sizing-default"> City </span>
+                <input type="text" class="form-control" aria-label="sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="enter city">
+
+                <button type="location"> Locate </button>
+            </form>
+        </div>
+    </section>
+    <section class="current-weather">
+        <div class="container" id= "todays-weather">
+            <ul class="city"></ul>
+        </div>
+    </section>
+    <!--JS Bootstrap w Popper-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src= "./script.js" ></script>
 </body>
 </html>
