--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </form>
         </div>
     </section>
-    <section class="current-weather">
+    <pre id="json" class="current-weather">
         <div class="container" id= "todays-weather">
             <ul class="city"></ul>
         </div>
-    </section>
+    </pre>
     <!--JS Bootstrap w Popper-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src= "./script.js" ></script>
